Upgrade to Selenium 4.8.3.